--- a/style.css
+++ b/style.css
@@ -18,11 +18,61 @@
     position:relative;
 }
 #display{
-    height: 80vh;
+    height: 95vh;
     width: 80vw;
     position: absolute;
     z-index: 1;
-    top: 5rem;
+    top: 1rem;
     left: 10rem;
     background-color: white;
+}
+#left{
+    width: 30%;
+    height: 100%;
+}
+#right{
+    display: flex;
+    width: 70%;
+    height: 100%;
+}
+.dim{
+    width: 100%;
+    height: 4rem;
+    display: flex;
+    align-items: center;
+}
+#dim2{
+    width: 100%;
+    height: 2rem;
+}
+.dim3{
+    width: 100%;
+    height: 25rem;
+    overflow-y:scroll;
+}
+
+.color{
+    background-color: rgb(210, 210, 210);
+}
+.userpic{
+height: 3.5rem;
+width: 3.5rem;
+border-radius: 50%;
+
+margin-left: 0.3rem;
+
+}
+.chat{
+    width: 100%;
+    height: 4rem;
+    display: flex;
+
+}
+img{
+    width: 3.5rem;
+    border-radius: 50%;
+    margin-top: 0.25rem;
+}
+.active:hover{
+    background-color: grey;
 }
