--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@
     top: 1rem;
     left: 10rem;
     background-color: white;
+    display: flex;
 }
 #left{
     width: 30%;
@@ -34,6 +35,7 @@
     display: flex;
     width: 70%;
     height: 100%;
+    flex-direction: column;
 }
 .dim{
     width: 100%;
@@ -73,6 +75,46 @@ img{
     border-radius: 50%;
     margin-top: 0.25rem;
 }
-.active:hover{
-    background-color: grey;
+.active{
+    background-color: rgb(205, 205, 205);
+}
+.info{
+    margin-left:0.5rem;
+    font-size: 0.8rem;
+    margin-top: 0.5rem;
+}
+.lastmsg{
+font-size: 0.5rem;
+color: grey;
+}
+.ora{
+    margin-top: 0.2rem;
+    margin-left: 3rem;
+}
+#topbar{
+   width: 100%;
+   height: 5rem;
+  
+}
+#footerbar{
+   width: 100%;
+   height: 4rem;
+   margin-bottom: 1rem;
+}
+#center{
+    width: 100%;
+    height: 100%;
+    overflow-y:scroll;
+    background-color: rgb(154, 237, 211);
+    
+}
+.received{
+    background-color: white;
+}
+.sent{
+    background-color: green;
+}
+.message{
+    max-width: 40%;
+    margin: 1rem;
 }
